--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: postgres
     environment:
         POSTGRES_DB: django
-        POSTGERS_USER: django_user
+        POSTGRES_USER: django_user
         POSTGRES_PASSWORD: django_password
     volumes:
         - db_data:/var/lib/postgresql/data
